fix: shifting of testimonials during transition

--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,56 +1,9 @@
 .testimonials {
-	margin: 0;
-	margin-top: 3rem;
 	color: var(--light-primary-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 2rem;
-	position: relative;
-	isolation: isolate;
-}
-
-.testimonials h1 {
-	text-align: center;
-}
-
-.testimonials h2 {
-	font-family: Rubik;
-	font-size: 1.5rem;
-	font-weight: 450;
-	text-align: center;
-	width: 75%;
-}
-
-.testimonial-body {
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-	width: 70%;
-	gap: 2rem;
-	margin: 2rem 0;
-	font-family: Rubik;
-	font-size: 1.5rem;
-}
-
-.testimonial-provider {
-	font-weight: 450;
-}
-
-.testimonial-img {
-	box-sizing: border-box;
-	height: 16rem;
-	width: 16rem;
-	min-height: 16rem;
-	min-width: 16rem;
-	aspect-ratio: 1;
-	object-fit: cover;
-	border-radius: 50%;
-	padding: 1rem;
-	background-color: var(--light-color);
-	border: 0.5vw solid var(--light-primary-color);
-	box-shadow: 0 0 2rem var(--light-secondary-color);
 }
 
 .left-leaves,
@@ -68,9 +21,70 @@
 	right: 0;
 }
 
+.testimonials h1 {
+	text-align: center;
+	margin: 2rem 0;
+}
+
+.testimonials h2 {
+	font-family: Rubik;
+	font-size: 1.5rem;
+	font-weight: 450;
+	text-align: center;
+	width: 75%;
+}
+
+.testimonial-body {
+	box-sizing: border-box;
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: 100%;
+	width: 70%;
+	padding: 2rem;
+	gap: 4rem;
+	font-family: Rubik;
+	font-size: 1.5rem;
+	overflow-x: hidden;
+}
+
+.testimonial-container {
+	width: 100%;
+	display: flex;
+	gap: 2rem;
+}
+
+.testimonial-img {
+	box-sizing: border-box;
+	height: 16rem;
+	width: 16rem;
+	min-height: 16rem;
+	min-width: 16rem;
+	aspect-ratio: 1;
+	object-fit: cover;
+	border-radius: 50%;
+	padding: 1rem;
+	background-color: var(--light-color);
+	border: 0.5vw solid var(--light-primary-color);
+	box-shadow: 0 0 2rem var(--light-secondary-color);
+}
+
+.testimonial-text {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.testimonial-content {
+	margin: auto;
+}
+
+.testimonial-provider {
+	font-weight: 450;
+}
+
 .carousel-control {
 	display: flex;
-	gap: 3rem;
+	gap: 2rem;
 	margin-top: auto;
 }
 
@@ -87,17 +101,6 @@
 	opacity: 1;
 }
 
-.testimonial-container {
-	flex: 100%;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-}
-
-.testimonial-content-container {
-	margin-top: auto;
-}
-
 .carousel-dots {
 	display: flex;
 	justify-content: space-evenly;
@@ -105,9 +108,11 @@
 	gap: 0.75rem;
 }
 
-.dot {
+.carousel-dots button {
+	display: block;
 	width: 0.625rem;
 	height: 0.625rem;
+	border: none;
 	background-color: var(--light-secondary-color);
 	opacity: 0.5;
 	border-radius: 50%;
@@ -115,11 +120,11 @@
 	transition: opacity 0.3s ease;
 }
 
-.dot:hover {
+.carousel-dots button:hover {
 	opacity: 0.5;
 }
 
-.dot.active {
+.carousel-dots button.active {
 	opacity: 1;
 }
 
@@ -148,7 +153,7 @@
 	opacity: 0.5;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1024px) {
 	.testimonial-sub-heading {
 		max-width: 100%;
 	}
@@ -160,11 +165,13 @@
 	}
 
 	.testimonial-container {
+		flex-direction: column;
 		align-items: center;
 	}
 }
 
 @media screen and (max-width: 1024px) {
+
 	.left-leaves,
 	.right-leaves {
 		display: none;
